<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">左右</string>
    <string name="exit_title">退出？</string>
    <string name="exit_message">真的要退出软件？</string>
    
     <!-- pull 2 refresh -->
    <string name="pull_to_refresh_pull_down_label">滑动刷新</string>
    <string name="pull_to_refresh_release_label">释放刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    
    <string name="back">返回</string>
    <string name="send">发送</string>
    
    
        <!-- 网络和内存卡提示 -->
    <string name="prompt">提示</string>
    <string name="check_connection">无可用网络连接，请检查网络设置！</string>
    <string name="check_sdcard">请检查内存卡！</string>
 	<string name="close">关闭</string>
	<string name="exit">退出</string>
	<string name="confirm">确定</string>
	<string name="cancel">取消</string>
	
	<string name="menu_settings">设置</string>
	
		<!-- 数据库和文件路径 -->
	<string name="dir">/wechat</string>
	<string name="app_dir">/app</string>
	<string name="db_dir">/database</string>
	<string name="img_dir">/img</string>  
	
	    <!-- 所有错误提示，都是以e_开头_hint结尾 -->
    <string name="e_username_hint">请输入正确的用户名</string>
    <string name="e_password_hint">请输入正确的密码</string>
	<string name="edit_text_type">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
	    <!-- EditText Max Length -->
	    
    <string name="max_length_username">20</string>
    <string name="max_length_password">20</string>
    <string name="login_title">登录</string>
    <string name="login_username_hint">用户名/手机号</string>
    <string name="login_password_hint">用户密码</string>
    <string name="login_username_length_hint">用户名不能超过20个字符</string>
    <string name="login_password_length_hint">密码不能超过20个字符</string>
    
    <string name="viewpager_indicator">%1$d/%2$d</string>
</resources>
