<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout 
        android:layout_height="48dp"
        android:layout_width="match_parent"
        android:background="@color/topbar_color"> 
        <TextView 
            android:id="@+id/title"
            android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
            android:text="注册"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="@dimen/navbar_title_size"/>
    </RelativeLayout>
	
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edittext_bg"
        android:gravity="center_vertical"
        android:id="@+id/useracount_ly"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp">


        <EditText
            android:id="@+id/editTextAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/translucence"
            android:digits="@string/edit_text_type"
            android:inputType="phone"
            android:editable="false"
            android:clickable="true"
            android:onClick="buttonClick"
            android:hint="请输入手机号"
            android:maxLength="@string/max_length_username"
            android:singleLine="true"
            android:layout_marginLeft="5dp"
            android:textColor="@color/text_color" />
     </LinearLayout>
     
     
      <Button
        android:id="@+id/sendCode"
       	android:gravity="center"
      	android:singleLine="true"
      	android:textSize="@dimen/button_textsize"
        android:textColor="@color/white"
        android:enabled="true"
        android:background="@drawable/login_btn_selector"
        android:onClick="buttonClick"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:text="发送验证码"/>
      
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edittext_bg"
        android:gravity="center_vertical"
        android:id="@+id/userpass_ly"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp">


        <EditText
            android:id="@+id/editVerifyCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/translucence"
            android:digits="@string/edit_text_type"
            android:hint="请输入验证码"
            android:layout_marginLeft="5dp"
            android:inputType="phone"
            android:singleLine="true"
            android:maxLength="@string/max_length_password"
            android:textColor="@color/text_color" />

    </LinearLayout>
	      
     <Button
        android:id="@+id/verifyMe"
       	android:gravity="center"
      	android:singleLine="true"
      	android:textSize="@dimen/button_textsize"
        android:textColor="@color/white"
        android:enabled="true"
        android:background="@drawable/login_btn_selector"
        android:onClick="buttonClick"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="验证" />	
        	 
</LinearLayout>
