<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout 
        android:layout_height="44dp"
        android:layout_width="match_parent"
        android:background="@color/topbar_color"> 
        <TextView 
            android:id="@+id/title"
            android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
            android:text="注册"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="@dimen/navbar_title_size"/>
    </RelativeLayout>
	
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edittext_bg"
        android:gravity="center_vertical"
        android:id="@+id/useracount_ly"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="fill_parent"
            android:background="@drawable/login_evbg"
            android:gravity="center"
            android:scaleType="center"
            android:src="@drawable/login_user_icon" />

        <View
            android:layout_width="@dimen/line_height"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/login_line_padding_vertical"
            android:layout_marginRight="@dimen/login_line_padding_horizontal"
            android:layout_marginTop="@dimen/login_line_padding_vertical"
            android:background="@color/line_bg" />

        <EditText
            android:id="@+id/editTextAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/translucence"
            android:digits="@string/edit_text_type"
            android:inputType="phone"
            android:editable="false"
            android:clickable="true"
            android:enabled="false"
            android:onClick="buttonClick"
            android:hint="@string/login_username_hint"
            android:maxLength="@string/max_length_username"
            android:singleLine="true"
            android:textColor="@color/text_color" />
     </LinearLayout>
     
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edittext_bg"
        android:gravity="center_vertical"
        android:id="@+id/userpass_ly"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="fill_parent"
            android:background="@drawable/login_evbg"
            android:gravity="center"
            android:scaleType="center"
            android:src="@drawable/login_password_icon" />

        <View
            android:layout_width="@dimen/line_height"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/login_line_padding_vertical"
            android:layout_marginRight="@dimen/login_line_padding_horizontal"
            android:layout_marginTop="@dimen/login_line_padding_vertical"
            android:background="@color/line_bg" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/translucence"
            android:digits="@string/edit_text_type"
            android:hint="请输入您的密码"
            android:inputType="textPassword"
            android:singleLine="true"
            android:maxLength="@string/max_length_password"
            android:textColor="@color/text_color" />

    </LinearLayout>
    
      
       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edittext_bg"
        android:gravity="center_vertical"
        android:id="@+id/userpass_ly"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="fill_parent"
            android:background="@drawable/login_evbg"
            android:gravity="center"
            android:scaleType="center"
            android:src="@drawable/login_password_icon" />

        <View
            android:layout_width="@dimen/line_height"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/login_line_padding_vertical"
            android:layout_marginRight="@dimen/login_line_padding_horizontal"
            android:layout_marginTop="@dimen/login_line_padding_vertical"
            android:background="@color/line_bg" />

        <EditText
            android:id="@+id/editPasswordAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/translucence"
            android:digits="@string/edit_text_type"
            android:hint="请确认您的密码"
            android:inputType="textPassword"
            android:singleLine="true"
            android:maxLength="@string/max_length_password"
            android:textColor="@color/text_color" />

    </LinearLayout>
	      
     <Button
        android:id="@+id/registerMe"
       	android:gravity="center"
      	android:singleLine="true"
      	android:textSize="@dimen/button_textsize"
        android:textColor="@color/white"
        android:enabled="true"
        android:background="@drawable/login_btn_selector"
        android:onClick="buttonClick"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="注册" />	
        	 
</LinearLayout>
